// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms.Button default 1`] = `
<button
  className="sc-bdVaJa bhUGjY"
>
  Button
</button>
`;

exports[`Storyshots Atoms.Hero default 1`] = `
<div
  className="sc-bwzfXH dGUCNu"
>
  <div
    className="sc-htpNat eLepeH"
  >
    <div
      className="sc-bxivhb kMqnGI"
    >
      <img
        alt="Quality-focused"
        src="http://lorempixel.com/300/300"
      />
    </div>
    <p
      className="sc-ifAKCX gnFXsa"
    >
      Puerto Rico
    </p>
  </div>
</div>
`;

exports[`Storyshots Atoms.Input default 1`] = `
<input
  className="sc-EHOje gPRTWD"
  placeholder="hello"
/>
`;

exports[`Storyshots Atoms.Profile default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#1111",
    }
  }
>
  <div
    className="sc-bxivhb kMqnGI"
  >
    <img
      alt="Swedish Krona"
      src="http://lorempixel.com/300/300"
    />
  </div>
  <p
    className="sc-ifAKCX gnFXsa"
  >
    global
  </p>
</div>
`;

exports[`Storyshots Atoms.Range default 1`] = `
<div
  className="sc-bZQynM bwHnQu"
>
  <div
    className="sc-gzVnrw lfdfns"
  >
    <div
      className="sc-htoDjs jvMEcJ"
    >
      <p>
        sensor
      </p>
      <p>
        users
      </p>
    </div>
    <div
      className="sc-dnqmqq cGmsmw"
    >
      <div
        className="sc-iwsKbI IvXSS"
        style={
          Object {
            "left": "50%",
          }
        }
      />
      <span />
      <span />
      <span />
      <span />
      <span />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms.Range input 1`] = `
<div
  className="sc-bZQynM bwHnQu"
>
  <div
    className="sc-gzVnrw lfdfns"
  >
    <div
      className="sc-htoDjs jvMEcJ"
    >
      <p>
        Administrator
      </p>
      <p>
        Metical
      </p>
    </div>
    <div
      className="sc-gZMcBi ibHfwa"
    >
      <input
        className="sc-gqjmRU bCeypN"
        step="25"
        type="range"
      />
      <span />
      <span />
      <span />
      <span />
      <span />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms.Rank default 1`] = `
<div
  className="sc-VigVT ldGSkn"
>
  <span>
    48093
  </span>
  <div
    className="sc-jTzLTM krEKHx"
    style={
      Object {
        "width": "14%",
      }
    }
  >
    <img
      alt="synergize"
      src="http://lorempixel.com/300/300"
    />
    <p>
      Everardo
    </p>
  </div>
</div>
`;

exports[`Storyshots Atoms.Result default 1`] = `
Array [
  <div
    className="sc-fjdhpX jMjblm"
  >
    <div
      className="sc-jzJRlG jZtvXR"
    >
      <span>
        50人中
      </span>
      10位
    </div>
  </div>,
  <p
    className="sc-cSHVUG eSTEPE"
  >
    Credit Card Account
  </p>,
]
`;

exports[`Storyshots Atoms.Textarea default 1`] = `
<textarea
  className="sc-kGXeez jMJnTm"
  placeholder="hello"
/>
`;

exports[`Storyshots Signin default 1`] = `
<div
  className="sc-kAzzGY olNwO"
>
  <main
    className="sc-chPdSV hkvTGi"
  >
    <form
      action="#"
      method="post"
    >
      <div
        className="sc-kgoBCf eKcaoV"
      >
        <input
          className="sc-EHOje gPRTWD"
          placeholder="Ian69@gmail.com"
          type="email"
        />
      </div>
      <div
        className="sc-kgoBCf eKcaoV"
      >
        <input
          className="sc-EHOje gPRTWD"
          placeholder="engage"
          type="password"
        />
      </div>
      <button
        className="sc-bdVaJa fnyDze"
        disabled={true}
      >
        Sign in
      </button>
    </form>
  </main>
</div>
`;

exports[`Storyshots Wrapper default 1`] = `
<div
  className="sc-eNQAEJ hiQJOI"
>
  <nav
    className="sc-jKJlTe iOzEuP"
  >
    <ul>
      <li>
        <a
          className="active"
          href="mypage.html"
        >
          <i
            className="fas fa-user"
          />
        </a>
      </li>
      <li>
        <a
          href="edit.html"
        >
          <i
            className="fas fa-edit"
          />
        </a>
      </li>
    </ul>
  </nav>
  <main
    className="sc-ckVGcZ idqjDH"
  >
    <div
      className="sc-bwzfXH dGUCNu"
    >
      <div
        className="sc-htpNat eLepeH"
      >
        <div
          className="sc-bxivhb kMqnGI"
        >
          <img
            alt="Table"
            src="http://lorempixel.com/300/300"
          />
        </div>
        <p
          className="sc-ifAKCX gnFXsa"
        >
          Computer
        </p>
      </div>
    </div>
    <div
      className="sc-kpOJdX djlqjM"
    >
      <div
        className="sc-dxgOiQ bArREt"
      >
        <div
          className="sc-bZQynM bwHnQu"
        >
          <div
            className="sc-gzVnrw lfdfns"
          >
            <div
              className="sc-htoDjs jvMEcJ"
            >
              <p>
                とても悪い
              </p>
              <p>
                とても良い
              </p>
            </div>
            <div
              className="sc-dnqmqq cGmsmw"
            >
              <div
                className="sc-iwsKbI IvXSS"
                style={
                  Object {
                    "left": "50%",
                  }
                }
              />
              <span />
              <span />
              <span />
              <span />
              <span />
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-dxgOiQ bArREt"
      >
        <div
          className="sc-fjdhpX jMjblm"
        >
          <div
            className="sc-jzJRlG jZtvXR"
          >
            <span>
              50人中
            </span>
            10位
          </div>
        </div>
        <p
          className="sc-cSHVUG eSTEPE"
        >
          alarm
        </p>
      </div>
    </div>
    <div
      className="sc-kpOJdX hBHHKW"
    >
      <div
        className="sc-dxgOiQ bArREt"
      >
        <div
          className="sc-VigVT ldGSkn"
        >
          <span>
            53155
          </span>
          <div
            className="sc-jTzLTM krEKHx"
            style={
              Object {
                "width": "71%",
              }
            }
          >
            <img
              alt="Israel"
              src="http://lorempixel.com/300/300"
            />
            <p>
              Lorenza
            </p>
          </div>
        </div>
        <div
          className="sc-VigVT ldGSkn"
        >
          <span>
            29778
          </span>
          <div
            className="sc-jTzLTM krEKHx"
            style={
              Object {
                "width": "85%",
              }
            }
          >
            <img
              alt="Buckinghamshire"
              src="http://lorempixel.com/300/300"
            />
            <p>
              Nakia
            </p>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
